k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: 337664200612.dkr.ecr.ap-southeast-2.amazonaws.com/webapp-ecr-repo:latest
          ports:
            - containerPort: 8080
